# MediaBridge

./: .dockerignore  .env.example  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  README.md  ROADMAP.md  TODO.md  docker-compose.yml  makefile  pyproject.toml
app/: main.py
app/core/: config.py  logging.py  settings.py
app/models/: download_job.py
app/routers/: jobs.py  root.py  youtube.py
app/schemas/: job.py  youtube.py
app/services/: downloader.py  job_manager.py  youtube.py
app/utils/: commands.py  process.py
docs/: architecture.md
tests/: test_root.py
