[project]
# [tool.setuptools.packages.find]
# include = ["app*"]
name = "mediabridge"
version = "0.1.0"
description = "Collect. Organize. Watch."
readme = "README.md"
requires-python = ">=3.12"

dependencies = [
    "fastapi",
    "uvicorn",
    "pydantic-settings",
    "pytest",
    "httpx",
    "yt-dlp",
]